welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value a
	if ((a && !b) || (b && !a)) return false;
             ^